@@ -14,16 +14,12 @@
 */
 package org.apache.vxquery.jsonparser;
 
-import java.io.ByteArrayOutputStream;
 import java.io.DataOutput;
 import java.io.IOException;
 import java.io.Reader;
-import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import org.apache.commons.lang3.ArrayUtils;
 import org.apache.htrace.fasterxml.jackson.core.JsonFactory;
 import org.apache.htrace.fasterxml.jackson.core.JsonParser;
 import org.apache.htrace.fasterxml.jackson.core.JsonToken;
@@ -42,7 +38,6 @@ import org.apache.vxquery.datamodel.builders.jsonitem.ArrayBuilder;
 import org.apache.vxquery.datamodel.builders.jsonitem.ObjectBuilder;
 import org.apache.vxquery.datamodel.builders.sequence.SequenceBuilder;
 import org.apache.vxquery.datamodel.values.ValueTag;
-import org.apache.vxquery.datamodel.values.XDMConstants;
 import org.apache.vxquery.xmlparser.IParser;
 
 public class JSONParser implements IParser {
@@ -50,7 +45,6 @@ public class JSONParser implements IParser {
     private final List<IPointable> valuePointables;
     protected final ArrayBackedValueStorage atomic;
     private TaggedValuePointable tvp;
-    private BooleanPointable bp;
     protected final List<ArrayBuilder> abStack;
     protected final List<ObjectBuilder> obStack;
     protected final List<ArrayBackedValueStorage> abvsStack;
@@ -62,18 +56,10 @@ public class JSONParser implements IParser {
     protected itemType checkItem;
     protected int levelArray;
     protected int levelObject;
-    //protected final List<Byte[]> allKeys;
     protected final List<Object> allKeys;
-    protected ByteArrayOutputStream outputStream;
-    protected ByteArrayOutputStream prefixStream;
-    protected ByteArrayOutputStream pathStream;
-    protected int objectMatchLevel;
-    protected int arrayMatchLevel;
     protected boolean matched;
-    protected boolean literal;
     protected ArrayBackedValueStorage tempABVS;
     protected List<Integer> arrayCounters;
-    protected List<Boolean> keysOrMembers;
     protected IFrameWriter writer;
     protected IFrameFieldAppender appender;
     protected boolean[] matchedKeys;
@@ -104,59 +90,30 @@ public class JSONParser implements IParser {
         itemStack = new ArrayList<>();
         svb = new StringValueBuilder();
         sb = new SequenceBuilder();
-        bp = new BooleanPointable();
         allKeys = new ArrayList<>();
         abvsStack.add(atomic);
         out = abvsStack.get(abvsStack.size() - 1).getDataOutput();
         tempABVS = new ArrayBackedValueStorage();
-        objectMatchLevel = 1;
-        arrayMatchLevel = 0;
         matched = false;
-        literal = false;
         arrayCounters = new ArrayList<>();
-        outputStream = new ByteArrayOutputStream();
-        prefixStream = new ByteArrayOutputStream();
-        pathStream = new ByteArrayOutputStream();
-        keysOrMembers = new ArrayList<>();
-        outputStream.reset();
-        pathStream.reset();
         subelements = new Object[valuePointables.size()];
         matchedKeys = new boolean[valuePointables.size()];
         skipping = true;
         for (int i = 0; i < valuePointables.size(); i++) {
+            int start = valuePointables.get(i).getStartOffset() + 1;
+            int length = valuePointables.get(i).getLength() - 1;
             if (((TaggedValuePointable) valuePointables.get(i)).getTag() == ValueTag.XS_INTEGER_TAG) {
                 // access an item of an array
-                //                pathStream.write(valuePointables.get(i).getByteArray(), valuePointables.get(i).getStartOffset(),
-                //                        valuePointables.get(i).getLength() - valuePointables.get(i).getStartOffset());
-                LongPointable lp = new LongPointable();
-                lp.set(valuePointables.get(i).getByteArray(), 1, valuePointables.get(i).getLength());
-                subelements[i] = lp.getLong();
-                this.arrayMatchLevel++;
-                this.keysOrMembers.add(Boolean.valueOf(true));
+                subelements[i] = new Long(LongPointable.getLong(valuePointables.get(i).getByteArray(), start));
             } else if (((TaggedValuePointable) valuePointables.get(i)).getTag() == ValueTag.XS_BOOLEAN_TAG) {
                 // access all the items of an array or all the keys of an object
-                //                pathStream.write(valuePointables.get(i).getByteArray(), valuePointables.get(i).getStartOffset(),
-                //                        valuePointables.get(i).getLength() - valuePointables.get(i).getStartOffset());
-
-                subelements[i] = Boolean.FALSE;
-                this.arrayMatchLevel++;
-                this.keysOrMembers.add(Boolean.valueOf(false));
+                subelements[i] = new Boolean(BooleanPointable.getBoolean(valuePointables.get(i).getByteArray(), start));
             } else {
-                //access an object
-                //                pathStream.write(valuePointables.get(i).getByteArray(), valuePointables.get(i).getStartOffset() + 1,
-                //                        valuePointables.get(i).getLength() - valuePointables.get(i).getStartOffset() - 1);
-
                 UTF8StringPointable sp = new UTF8StringPointable();
-                sp.set(valuePointables.get(i).getByteArray(), 1, valuePointables.get(i).getLength() - 1);
+                sp.set(valuePointables.get(i).getByteArray(), start, length);
                 subelements[i] = sp.toString();
             }
         }
-    }
-
-    Byte[] toBytes(Integer v) {
-        Byte[] barr = ArrayUtils.toObject(ByteBuffer.allocate(9).putLong(1, v).array());
-        barr[0] = ValueTag.XS_INTEGER_TAG;
-        return barr;
     }
 
     public int parse(Reader input, ArrayBackedValueStorage result, IFrameWriter writer, IFrameFieldAppender appender)
@@ -257,7 +214,6 @@ public class JSONParser implements IParser {
             JsonToken token = parser.nextToken();
             checkItem = null;
 
-            this.objectMatchLevel = 0;
             this.matched = false;
 
             levelArray = 0;
@@ -288,27 +244,22 @@ public class JSONParser implements IParser {
                         break;
                     case END_ARRAY:
                         //if the query doesn't ask for an atomic value
-//                        if (!this.literal && this.pathMatch()) {
-                        if (!this.literal && !skipping) {
-                            //check if the path asked from the query includes the current path
+                        if (!matched && !skipping) {
                             abStack.get(levelArray - 1).finish();
                             if (itemStack.size() > 1) {
                                 if (checkItem == itemType.ARRAY) {
-                                    if (levelArray > this.arrayMatchLevel + 1) {
-                                        abStack.get(levelArray - 2).addItem(abvsStack.get(levelArray + levelObject));
-                                    } else if (this.matched) {
-                                        this.matched = false;
+                                    abStack.get(levelArray - 2).addItem(abvsStack.get(levelArray + levelObject));
+                                    if (!matched) {
                                         items++;
                                         writeElement(abvsStack.get(levelArray + levelObject));
+                                        skipping = true;
                                     }
                                 } else if (checkItem == itemType.OBJECT) {
-                                    if (levelArray > this.arrayMatchLevel && !this.matched) {
-                                        obStack.get(levelObject - 1).addItem(spStack.get(levelObject - 1),
-                                                abvsStack.get(levelArray + levelObject));
-                                        //                                    } else if (this.matched) {
-                                    } else if (!skipping) {
+                                    obStack.get(levelObject - 1).addItem(spStack.get(levelObject - 1),
+                                            abvsStack.get(levelArray + levelObject));
+                                    if (!matched) {
                                         writeElement(abvsStack.get(levelArray + levelObject));
-                                        this.matched = false;
+                                        skipping = true;
                                         items++;
                                     }
                                 }
@@ -323,28 +274,23 @@ public class JSONParser implements IParser {
                         break;
                     case END_OBJECT:
                         //if the query doesn't ask for an atomic value
-//                        if (!this.literal && this.pathMatch()) {
-                        if (!this.literal && !skipping) {
+                        if (!matched && !skipping) {
                             //check if the path asked from the query includes the current path
                             obStack.get(levelObject - 1).finish();
                             if (itemStack.size() > 1) {
                                 if (checkItem == itemType.OBJECT) {
-                                    if (levelObject > this.objectMatchLevel) {
-                                        obStack.get(levelObject - 2).addItem(spStack.get(levelObject - 2),
-                                                abvsStack.get(levelArray + levelObject));
-                                    } else if (this.matched) {
-                                        this.matched = false;
+                                    obStack.get(levelObject - 2).addItem(spStack.get(levelObject - 2),
+                                            abvsStack.get(levelArray + levelObject));
+                                    if (!this.matched) {
                                         items++;
                                         writeElement(abvsStack.get(levelArray + levelObject));
+                                        skipping = true;
                                     }
                                 } else if (checkItem == itemType.ARRAY) {
                                     abStack.get(levelArray - 1).addItem(abvsStack.get(levelArray + levelObject));
-                                    // if (this.matched) {
-                                    if (!skipping) {
+                                    if (!matched) {
                                         writeElement(abvsStack.get(levelArray + levelObject));
-                                        this.matched = false;
                                         skipping = true;
-                                        // }
                                     }
                                 }
                             }
@@ -368,32 +314,12 @@ public class JSONParser implements IParser {
     }
 
     private boolean pathMatch() {
-        outputStream.reset();
-        //        for (Byte[] bb : allKeys) {
-        //            outputStream.write(ArrayUtils.toPrimitive(bb), 0, ArrayUtils.toPrimitive(bb).length);
-        //        }
-        //the path of values created by parsing the file
         boolean contains = false;
-        this.matched = false;
-        prefixStream.reset();
-        //        if (pathStream.size() < outputStream.size()) {
-        //            prefixStream.write(outputStream.toByteArray(), 0, pathStream.size());
-        //            contains = Arrays.equals(prefixStream.toByteArray(), pathStream.toByteArray());
-        //        } else {
-        //            prefixStream.write(pathStream.toByteArray(), 0, outputStream.size());
-        //            contains = Arrays.equals(prefixStream.toByteArray(), outputStream.toByteArray());
-        //        }
-        //        if (pathStream.size() == outputStream.size() && contains) {
-        //            this.objectMatchLevel = this.levelObject;
-        //            this.matched = true;
-        //            this.literal = false;
-        //        }
-        if (!allKeys.isEmpty()) {
-            if (allKeys.size() <= valuePointables.size()) {
-                //for(int i=0; i<allKeys.size(); i++){
-                if (allKeys.get(allKeys.size() - 1).equals(subelements[allKeys.size() - 1])) {
-                    matchedKeys[allKeys.size() - 1] = true;
-                }
+        if (!allKeys.isEmpty() && allKeys.size() <= valuePointables.size()) {
+            if (allKeys.get(allKeys.size() - 1).equals(subelements[allKeys.size() - 1])) {
+                matchedKeys[allKeys.size() - 1] = true;
+            } else {
+                matchedKeys[allKeys.size() - 1] = false;
             }
         }
         for (boolean b : matchedKeys) {
@@ -411,16 +337,12 @@ public class JSONParser implements IParser {
 
     public void itemsInArray() {
         if (itemStack.get(itemStack.size() - 1) == itemType.ARRAY && !this.arrayCounters.isEmpty()) {
-            boolean addCounter = levelArray - 1 < this.keysOrMembers.size() ? this.keysOrMembers.get(levelArray - 1)
-                    : true;
+            boolean addCounter = subelements[allKeys.size()].equals(Boolean.TRUE) ? false : true;
             if (addCounter) {
                 this.arrayCounters.set(levelArray - 1, this.arrayCounters.get(levelArray - 1) + 1);
-                //this.allKeys.add(this.toBytes(this.arrayCounters.get(levelArray - 1)));
-                this.allKeys.add(this.arrayCounters.get(levelArray - 1));
+                this.allKeys.add(new Long(this.arrayCounters.get(levelArray - 1)));
             } else {
-                Byte[] bool = { (byte) 0x2B, 0x01 };
-                //this.allKeys.add(bool);
-                this.allKeys.add(Boolean.FALSE);
+                this.allKeys.add(Boolean.TRUE);
             }
         }
     }
@@ -439,17 +361,17 @@ public class JSONParser implements IParser {
         if (!itemStack.isEmpty()) {
             if (itemStack.get(itemStack.size() - 1) == itemType.ARRAY) {
                 abStack.get(levelArray - 1).addItem(abvsStack.get(0));
-                if (!valuePointables.isEmpty() && this.matched && levelArray == this.arrayMatchLevel) {
-                    this.literal = true;
-                    this.matched = false;
+                if (!valuePointables.isEmpty()
+                        && allKeys.get(allKeys.size() - 1).equals(subelements[subelements.length - 1])) {
                     writeElement(abvsStack.get(0));
+                    matched = true;
                 }
             } else if (itemStack.get(itemStack.size() - 1) == itemType.OBJECT) {
                 obStack.get(levelObject - 1).addItem(spStack.get(levelObject - 1), abvsStack.get(0));
-                if (!valuePointables.isEmpty() && this.matched && levelObject == this.objectMatchLevel) {
-                    this.literal = true;
-                    this.matched = false;
+                if (!valuePointables.isEmpty()
+                        && allKeys.get(allKeys.size() - 1).equals(subelements[subelements.length - 1])) {
                     writeElement(abvsStack.get(0));
+                    matched = true;
                 }
             }
         }
@@ -465,17 +387,13 @@ public class JSONParser implements IParser {
 
     public void startArrayOrObjects(int count) {
         if (!valuePointables.isEmpty() && !this.arrayCounters.isEmpty()) {
-            boolean addCounter = levelArray - count < this.keysOrMembers.size()
-                    ? this.keysOrMembers.get(levelArray - count) : true;
+            boolean addCounter = subelements[allKeys.size()].equals(Boolean.TRUE) ? false : true;
             if (itemStack.get(itemStack.size() - 1) == itemType.ARRAY) {
                 if (addCounter) {
                     this.arrayCounters.set(levelArray - count, this.arrayCounters.get(levelArray - count) + 1);
-                    // this.allKeys.add(this.toBytes(this.arrayCounters.get(levelArray - count)));
-                    this.allKeys.add(this.arrayCounters.get(levelArray - count));
+                    this.allKeys.add(new Long(this.arrayCounters.get(levelArray - count)));
                 } else {
-                    XDMConstants.setTrue(bp);
-                    //this.allKeys.add(ArrayUtils.toObject(bp.getByteArray()));
-                    this.allKeys.add(Boolean.FALSE);
+                    this.allKeys.add(Boolean.TRUE);
                 }
             }
 
@@ -536,21 +454,9 @@ public class JSONParser implements IParser {
             svb.write(parser.getText(), outk);
             spStack.get(levelObject - 1).set(keyStack.get(levelObject - 1));
             if (!valuePointables.isEmpty()) {
-                int length = 0;
-                byte[] barr = spStack.get(levelObject - 1).getByteArray();
-                outputStream.reset();
-                outputStream.write(barr, 0, spStack.get(levelObject - 1).getLength());
-                //allKeys.add(ArrayUtils.toObject(outputStream.toByteArray()));
                 allKeys.add(spStack.get(levelObject - 1).toString());
-                for (int i = 0; i < allKeys.size() - 1; i++) {
-                    //  tvp.set(ArrayUtils.toPrimitive(allKeys.get(i)), 0, ArrayUtils.toPrimitive(allKeys.get(i)).length);
-                    //length += ArrayUtils.toPrimitive(allKeys.get(i)).length;
-                }
                 //if the next two bytes represent a boolean (boolean has only two bytes),
                 //it means that query asks for all the keys of the object
-                //                if (length <= pathStream.size() && (length + 2) <= pathStream.size()) {
-                //                    tvp.set(pathStream.toByteArray(), length, length + 2);
-                //if (tvp.getTag() == ValueTag.XS_BOOLEAN_TAG) {
                 if (allKeys.size() < valuePointables.size()) {
                     if (allKeys.get(allKeys.size() - 1) == valuePointables.get(allKeys.size() - 1).toString()) {
                         tvp.set(valuePointables.get(allKeys.size()));
@@ -560,7 +466,6 @@ public class JSONParser implements IParser {
                             svb.write(parser.getText(), out);
                             writeElement(abvsStack.get(0));
                         }
-                        //                }
                     }
                 }
             }
